tests/functional2/lang/attrs/parse-fail-unterminated.err.exp
error: syntax error, unexpected end of file, expecting '}' to end attribute set
       at /pwd/in.nix:3:1:
            2|   a = "b";
            3|
             | ^
